--- a/app/src/main/res/layout/activity_bid_list.xml
+++ b/app/src/main/res/layout/activity_bid_list.xml
@@ -30,11 +30,17 @@
         android:text="No bids"
         android:visibility="gone"
         app:edittextfont="Raleway-Regular.ttf" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_bar" />
+        android:layout_below="@id/toolbar_bar"
+        android:id="@+id/refreshBids"
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar_bar" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
