--- a/app/src/main/res/layout/bid_list_item_layout.xml
+++ b/app/src/main/res/layout/bid_list_item_layout.xml
@@ -8,40 +8,98 @@
     android:layout_marginTop="@dimen/_8sdp"
     app:contentPadding="@dimen/_5sdp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tvItem"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/ll1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="roboto"
-            android:text="Item 1"
-            android:textColor="@color/blue" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_marginTop="@dimen/_3sdp"
-            android:id="@+id/tvDateTime"
-            style="@style/TextAppearance.AppCompat.Notification.Time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:fontFamily="roboto"
-            android:text="NA"
-            android:textColor="@color/blue" />
+            <TextView
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:fontFamily="roboto"
+                android:text="Bid Id : "
+                android:textColor="@color/blue" />
 
-        <TextView
-            android:layout_marginTop="@dimen/_3sdp"
-            android:id="@+id/tvStatus"
-            style="@style/TextAppearance.AppCompat.Notification.Time"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tvItemId"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="roboto"
+                android:text="#00Hawaii"
+                android:textColor="@color/blue" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:fontFamily="roboto"
-            android:text="Un-accepted"
-            android:textColor="@color/red" />
-    </LinearLayout>
+            android:layout_below="@+id/ll1"
+            android:orientation="horizontal">
+            <TextView
+                style="@style/TextAppearance.AppCompat.Notification.Time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="roboto"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:text="Date/TIme : "
+                android:textColor="@color/blue" />
+            <TextView
+                android:id="@+id/tvDateTime"
+                style="@style/TextAppearance.AppCompat.Notification.Time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:fontFamily="roboto"
+                android:text="NA"
+                android:textColor="@color/blue" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ll2"
+            android:orientation="horizontal">
+            <TextView
+                style="@style/TextAppearance.AppCompat.Notification.Time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="roboto"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:text="Bid Status : "
+                android:textColor="@color/red" />
+            <TextView
+                android:id="@+id/tvStatus"
+                style="@style/TextAppearance.AppCompat.Notification.Time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:fontFamily="roboto"
+                android:text="Un-accepted"
+                android:textColor="@color/red" />
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/_2sdp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_keyboard_arrow_right_green_24dp"/>
+        </RelativeLayout>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
