--- a/app/src/main/res/layout/fragment_business_profile.xml
+++ b/app/src/main/res/layout/fragment_business_profile.xml
@@ -19,12 +19,22 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="20dp">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_circle"
+        <android.support.v7.widget.CardView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/pic" />
+            android:layout_margin="5dp"
+            android:paddingRight="8dp"
+            android:paddingTop="8dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="50dp">
+
+            <ImageView
+                android:id="@+id/img_circle"
+                android:layout_width="match_parent"
+                android:src="@drawable/pic"
+                android:layout_height="match_parent"
+                />
+        </android.support.v7.widget.CardView>
 
 
         <com.yberry.dinehawaii.customview.CustomTextView
