--- a/app/src/main/res/layout/fragment_customer_home.xml
+++ b/app/src/main/res/layout/fragment_customer_home.xml
@@ -237,6 +237,7 @@
                     android:drawableLeft="@drawable/drawable_green_dot"
                     android:drawablePadding="@dimen/_5sdp"
                     android:gravity="center_vertical"
+                    android:visibility="gone"
                     android:padding="@dimen/_10sdp"
                     android:text="Feedback &amp; Review"
                     android:textColor="@color/colorPrimary"
@@ -246,6 +247,7 @@
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_1sdp"
+                android:visibility="gone"
                 android:background="@drawable/bootomline_green_back_trans"></View>
 
             <com.yberry.dinehawaii.customview.CustomTextView
