--- a/app/src/main/res/layout/activity_bid_item_details.xml
+++ b/app/src/main/res/layout/activity_bid_item_details.xml
@@ -271,7 +271,7 @@
                             <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.3"
+                                android:layout_weight="0.26"
                                 android:orientation="vertical">
 
                                 <com.yberry.dinehawaii.customview.CustomTextView
@@ -300,7 +300,21 @@
 
                             </LinearLayout>
 
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.2"
+                                android:orientation="horizontal">
 
+                                <com.yberry.dinehawaii.customview.CustomTextView
+                                    style="@style/TextAppearance.AppCompat.Small"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="@dimen/_5sdp"
+                                    android:text="Item Price"
+                                    app:edittextfont="@string/raleway_bold" />
+                            </LinearLayout>
                             <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
@@ -358,9 +372,6 @@
                             android:layout_height="@dimen/_1sdp"
                             android:background="@color/colorDivider" />
 
-                        <android.support.v4.widget.NestedScrollView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -372,7 +383,6 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content" />
                             </LinearLayout>
-                        </android.support.v4.widget.NestedScrollView>
                     </LinearLayout>
 
                 </LinearLayout>
