--- a/app/src/main/res/layout/vendor_bid_item_detail_layout.xml
+++ b/app/src/main/res/layout/vendor_bid_item_detail_layout.xml
@@ -16,7 +16,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
+            android:layout_weight="0.26"
             android:orientation="vertical">
 
             <LinearLayout
@@ -88,7 +88,30 @@
                 app:edittextfont="Raleway-Regular.ttf" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/_3sdp"
+            android:paddingTop="@dimen/_3sdp">
 
+            <com.yberry.dinehawaii.customview.CustomTextView
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="$"
+                app:edittextfont="Raleway-Regular.ttf" />
+
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvItemPrice"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                app:edittextfont="Raleway-Regular.ttf" />
+        </LinearLayout>
         <LinearLayout
 
             android:layout_width="0dp"
